--- a/html/PBWBU/PBWBU000001.html
+++ b/html/PBWBU/PBWBU000001.html
@@ -1095,30 +1095,30 @@
 								</div>
 							</div>
 							<div class="group-content">
-								<p class="description info body-small fc-typography-caption mt24">최대 5개 선택할 수 있습니다.</p>
+								<!-- <p class="description info body-small fc-typography-caption mt24">최대 5개 선택할 수 있습니다.</p> -->
 								<div class="inp-column-list form">
 									<div class="inp inp-medium">
 										<label>
 											<input type="checkbox">
-											<span class="label-title">신용위험분석사(CRA)1차</span>
+											<span class="label-title ff-42DotSans">LevelⅢ</span>
 										</label>
 									</div>
 									<div class="inp inp-medium">
 										<label>
 											<input type="checkbox">
-											<span class="label-title">공인신용분석사</span>
+											<span class="label-title ff-42DotSans">공인신용분석사</span>
 										</label>
 									</div>
 									<div class="inp inp-medium">
 										<label>
 											<input type="checkbox">
-											<span class="label-title">CFP(국제공인재무설계사)</span>
+											<span class="label-title ff-42DotSans">CFP(국제공인재무설계사)</span>
 										</label>
 									</div>
 									<div class="inp inp-medium">
 										<label>
 											<input type="checkbox">
-											<span class="label-title">CDCS(국제공인신용장전문가자격증)</span>
+											<span class="label-title ff-42DotSans">CDCS(국제공인신용장전문가자격증)</span>
 										</label>
 									</div>
 								</div>
@@ -1138,36 +1138,36 @@
 								</div>
 							</div>
 							<div class="group-content">
-								<p class="description info body-small fc-typography-caption mt24">최대 5개 선택할 수 있습니다.</p>
+								<!-- <p class="description info body-small fc-typography-caption mt24">최대 5개 선택할 수 있습니다.</p> -->
 								<div class="inp-column-list form form-invalid">
 									<div class="inp inp-medium">
 										<label>
 											<input type="checkbox" checked disabled>
-											<span class="label-title">선택안함</span>
+											<span class="label-title ff-42DotSans">선택안함</span>
 										</label>
 									</div>
 									<div class="inp inp-medium">
 										<label>
 											<input type="checkbox" disabled>
-											<span class="label-title">신용위험분석사(CRA)1차</span>
+											<span class="label-title ff-42DotSans">LevelⅢ</span>
 										</label>
 									</div>
 									<div class="inp inp-medium">
 										<label>
 											<input type="checkbox" disabled>
-											<span class="label-title">공인신용분석사</span>
+											<span class="label-title ff-42DotSans">공인신용분석사</span>
 										</label>
 									</div>
 									<div class="inp inp-medium">
 										<label>
 											<input type="checkbox" disabled>
-											<span class="label-title">CFP(국제공인재무설계사)</span>
+											<span class="label-title ff-42DotSans">CFP(국제공인재무설계사)</span>
 										</label>
 									</div>
 									<div class="inp inp-medium">
 										<label>
 											<input type="checkbox" disabled>
-											<span class="label-title">CDCS(국제공인신용장전문가자격증)</span>
+											<span class="label-title ff-42DotSans">CDCS(국제공인신용장전문가자격증)</span>
 										</label>
 									</div>
 									<p class="validate-text">1개 이상 선택해 주세요.</p>
