--- a/html/PBWMA/PBWMA000000.html
+++ b/html/PBWMA/PBWMA000000.html
@@ -227,9 +227,11 @@
 									</a>
 								</li>
 							</ul>
-							<div class="mt8 ac">
-								<a href="#" class="anchor chevron chevron-down fs-15 py16 gap4">2건 더보기</a>
-							</div>
+							<div id="chevronContainer" class="view-more">
+                                <div class="mt8 ac">
+                                    <a href="#" class="anchor chevron chevron-down fs-15 py16 gap4">2건 더보기</a>
+                                </div>
+                            </div>
 						</div>
 
 						<div class="main-schedule-list">
@@ -411,7 +413,7 @@
 						</div>
 						<div class="main-notice-list">
 							<a href="#">
-								<p>우리은행 PB영업지원 APP이 오픈되었습니다.</p>
+								<p>우리은행 PB영업지원 APP이 오픈되었습니다.우리은행 PB영업지원 APP이 오픈되었습니다.우리은행 PB영업지원 APP이 오픈되었습니다.</p>
 								<div class="date">2024-11-04</div>
 							</a>
 							<a href="#">
