--- a/html/PBWMA/PBWMA000000_tablet.html
+++ b/html/PBWMA/PBWMA000000_tablet.html
@@ -417,7 +417,7 @@
 								</div>
 								<div class="main-notice-list">
 									<a href="#">
-										<p>우리은행 PB영업지원 APP이 오픈되었습니다.</p>
+										<p>우리은행 PB영업지원 APP이 오픈되었습니다.우리은행 PB영업지원 APP이 오픈되었습니다.우리은행 PB영업지원 APP이 오픈되었습니다.</p>
 										<div class="date">2024-11-04</div>
 									</a>
 									<a href="#">
@@ -534,7 +534,7 @@
 				el: ".swiper-pagination",
 			}
 		});
-		// MicroModal.show('modal-notice');
+		MicroModal.show('modal-notice');
 	</script>
 </body>
 
