--- a/html/index.html
+++ b/html/index.html
@@ -1433,7 +1433,7 @@
 
 				if (location.includes("vercel.app/html/")) {
 					$(this).attr({
-						href: `../${linkFolder}/${linkName}.html`,
+						href: `./${linkFolder}/${linkName}.html`,
 						target: "_blank",
 					});
 				} else {
