--- a/html/index.html
+++ b/html/index.html
@@ -1427,6 +1427,7 @@
 			var linkName = $(this).html();
 			var linkFolder = $(this).closest("tbody").data("folder");
 			const location = window.location.href;
+			console.log(location)
 
 			//add anchor
 			if (this.attributes.href.value === "") {
