--- a/html/index.html
+++ b/html/index.html
@@ -1423,28 +1423,21 @@
 	<!-- /.content -->
 
 	<script>
+		const location = window.location.href;
+		if (location.includes("vercel.app")) {
+			window.location.href = 'https://woori-app.vercel.app/html';
+		}
 		$(".link").each(function() {
 			var linkName = $(this).html();
 			var linkFolder = $(this).closest("tbody").data("folder");
-			const location = window.location.href;
 			console.log(location)
 
 			//add anchor
 			if (this.attributes.href.value === "") {
-
-				if (location.includes("vercel.app/html/")) {
-					$(this).attr({
-						href: `./${linkFolder}/${linkName}.html`,
-						target: "_blank",
-					});
-				} else {
-					$(this).attr({
-						href: `./${linkFolder}/${linkName}.html`,
-						target: "_blank",
-					});
-				}
-
-
+				$(this).attr({
+					href: `./${linkFolder}/${linkName}.html`,
+					target: "_blank",
+				});
 			} else {
 				this.outerHTML = linkName;
 			}
