--- a/html/index.html
+++ b/html/index.html
@@ -1424,7 +1424,7 @@
 
 	<script>
 		const loc = window.location.href;
-		if (loc.includes("vercel.app")) {
+		if (loc.includes("vercel.app/html/")) {
 			window.location.href = 'https://woori-app.vercel.app/html';
 		}
 		$(".link").each(function() {
