--- a/publish/PBWMA/PBWMA000000_tablet.html
+++ b/publish/PBWMA/PBWMA000000_tablet.html
@@ -534,7 +534,7 @@
 				el: ".swiper-pagination",
 			}
 		});
-		MicroModal.show('modal-notice');
+		// MicroModal.show('modal-notice');
 	</script>
 </body>
 
