--- a/publish/PBWBU/PBWBU010002_tablet.html
+++ b/publish/PBWBU/PBWBU010002_tablet.html
@@ -159,7 +159,7 @@
 							<!-- //group -->
 
 							<div class="is-tablet">
-								<p class="description error body-small mt40 fc-typography-caption">등록된 고객명함은 현재 소속 지점으로 등록되어 지점 이동 후에는 조회하실 수 없습니다. <br> 개인정보 또는 부적절한 내용 작성을 금지하며, 마케팅 정보로 이용할 수 없습니다.</p>
+								<p class="description error body-small fs-14 mt40 fc-typography-caption">등록된 고객명함은 현재 소속 지점으로 등록되어 지점 이동 후에는 조회하실 수 없습니다. <br> 개인정보 또는 부적절한 내용 작성을 금지하며, 마케팅 정보로 이용할 수 없습니다.</p>
 							</div>
 						</div>
 
