--- a/publish/PBWCL/PBWCL000000_tablet.html
+++ b/publish/PBWCL/PBWCL000000_tablet.html
@@ -92,38 +92,42 @@
 
 
 					<div class="tablet-maxwidth">
-						<!-- group-form -->
-						<div class="group-form mt16">
-							<div class="group-title">
-								<strong class="title-medium">통합고객번호 <i class="apos" aria-label="필수 입력">*</i></strong>
-							</div>
-							<div class="group-content">
-								<div class="form">
-									<div class="input-wrap input-btn">
-										<input type="button" value=" " aria-label="통합고객번호" data-micromodal-trigger="modal-number-search">
-										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
-										<button type="button" class="input-search" data-micromodal-trigger="modal-number-search" aria-label="입력 내용 검색"></button>
+
+						<div class="group-form-flex mt16">
+							<!-- group-form -->
+							<div class="group-form">
+								<div class="group-title">
+									<strong class="title-medium">통합고객번호 <i class="apos" aria-label="필수 입력">*</i></strong>
+								</div>
+								<div class="group-content">
+									<div class="form">
+										<div class="input-wrap input-btn">
+											<input type="button" value=" " aria-label="통합고객번호" data-micromodal-trigger="modal-number-search">
+											<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
+											<button type="button" class="input-search" data-micromodal-trigger="modal-number-search" aria-label="입력 내용 검색"></button>
+										</div>
 									</div>
 								</div>
 							</div>
-						</div>
-						<!-- //group-form -->
-						<!-- group-form -->
-						<div class="group-form mt40">
-							<div class="group-title">
-								<strong class="title-medium">대상기간</strong>
-							</div>
-							<div class="group-content">
-								<div class="form">
-									<div class="input-wrap input-datepicker">
-										<button type="button" aria-label="대상기간 시작일" data-micromodal-trigger="modal-datepicker-month1">2023-11</button>
-										<div class="bul">-</div>
-										<button type="button" aria-label="대상기간 종료일" data-micromodal-trigger="modal-datepicker-month2">2024-10</button>
+							<!-- //group-form -->
+							<!-- group-form -->
+							<div class="group-form">
+								<div class="group-title">
+									<strong class="title-medium">대상기간</strong>
+								</div>
+								<div class="group-content">
+									<div class="form">
+										<div class="input-wrap input-datepicker">
+											<button type="button" aria-label="대상기간 시작일" data-micromodal-trigger="modal-datepicker-month1">2023-11</button>
+											<div class="bul">-</div>
+											<button type="button" aria-label="대상기간 종료일" data-micromodal-trigger="modal-datepicker-month2">2024-10</button>
+										</div>
 									</div>
 								</div>
 							</div>
+							<!-- //group-form -->
 						</div>
-						<!-- //group-form -->
+
 						<!-- group-form -->
 						<div class="group-form mt40">
 							<div class="group-title">
