--- a/publish/PBWCL/PBWCL030000_tablet.html
+++ b/publish/PBWCL/PBWCL030000_tablet.html
@@ -97,7 +97,7 @@
 							<div class="group-title">
 								<strong class="title-medium">검색대상</strong>
 							</div>
-							<div class="group-content">
+							<div class="group-content group-content-flex">
 								<div class="form">
 									<button class="select" data-micromodal-trigger="modal-select-list" data-placeholder="선택하세요"><span>기업명</span></button>
 								</div>
@@ -115,7 +115,7 @@
 						<div class="stroke my24"></div>
 						<!-- group-form -->
 						<div class="group-form">
-							<div class="group-content">
+							<div class="group-content group-content-flex">
 								<div class="form">
 									<button type="button" class="anchor chevron anchor-fluid anchor-border" data-micromodal-trigger="modal-job"><span class="body-large fw-700">업종 전체</span></button>
 								</div>
