--- a/publish/PBWBU/PBWBU020001.html
+++ b/publish/PBWBU/PBWBU020001.html
@@ -124,7 +124,7 @@
 								<span>직책</span>
 							</div>
 						</div>
-						<div class="info-detail-list mt24">
+						<div class="info-detail-list">
 							<div class="info-table">
 								<div class="info-body">
 									<div class="info-row">
