--- a/publish/PBWBU/PBWBU020001_tablet.html
+++ b/publish/PBWBU/PBWBU020001_tablet.html
@@ -98,6 +98,10 @@
 								padding-left: 0;
 								padding-right: 0;
 							}
+
+							.section-tablet-row .section-tablet-right {
+								padding-bottom: 138px;
+							}
 						}
 					</style>
 					<!-- section-tablet -->
@@ -114,16 +118,8 @@
 								</button>
 							</div>
 							<!-- //upload-picture -->
-							<!-- <div class="is-tablet">
-								<p class="description error body-small fc-typography-caption my40">등록된 고객명함은 현재 소속 지점으로 등록되어 지점 이동 후에는 조회하실 수 없습니다. <br> 개인정보 또는 부적절한 내용 작성을 금지하며, 마케팅 정보로 이용할 수 없습니다.</p>
-							</div> -->
-						</div>
-						<!-- //section-tablet-left -->
-
-						<!-- section-tablet-right -->
-						<div class="section-tablet-right">
 							<!-- business-card-info -->
-							<div class="business-card-info">
+							<div class="business-card-info mt40">
 								<div class="info-title">
 									<div class="info-name">
 										<div class="info-thumb">
@@ -144,39 +140,55 @@
 										<span>직책</span>
 									</div>
 								</div>
-								<div class="info-detail-list mt24">
-									<div class="info-table">
-										<div class="info-body">
-											<div class="info-row">
-												<div class="info-th">회사</div>
-												<div class="info-td">
-													<div class="group gap10 py0">
-														<span>회사이름</span>
-														<a href="#" class="anchor chevron fs-16">기업조회</a>
-													</div>
+
+							</div>
+							<!-- //business-card-info -->
+						</div>
+						<!-- //section-tablet-left -->
+
+						<!-- section-tablet-right -->
+						<div class="section-tablet-right">
+
+							<!-- group -->
+							<div class="is-tablet mt-8">
+								<div class="group py0 px4 mt24">
+									<strong class="title-large">기본정보</strong>
+								</div>
+								<!-- group -->
+							</div>
+
+							<div class="info-detail-list">
+								<div class="info-table">
+									<div class="info-body">
+										<div class="info-row">
+											<div class="info-th">회사</div>
+											<div class="info-td">
+												<div class="group gap10 py0">
+													<span>회사이름</span>
+													<a href="#" class="anchor chevron fs-16">기업조회</a>
 												</div>
 											</div>
-											<div class="info-row">
-												<div class="info-th">휴대폰</div>
-												<div class="info-td">010-****-5736</div>
-											</div>
-											<div class="info-row">
-												<div class="info-th">이메일</div>
-												<div class="info-td">**c@a**.com</div>
-											</div>
-											<div class="info-row">
-												<div class="info-th">전화번호</div>
-												<div class="info-td">02-****-5678</div>
-											</div>
-											<div class="info-row">
-												<div class="info-th">팩스번호</div>
-												<div class="info-td">02-****-4321</div>
-											</div>
+										</div>
+										<div class="info-row">
+											<div class="info-th">휴대폰</div>
+											<div class="info-td">010-****-5736</div>
+										</div>
+										<div class="info-row">
+											<div class="info-th">이메일</div>
+											<div class="info-td">**c@a**.com</div>
+										</div>
+										<div class="info-row">
+											<div class="info-th">전화번호</div>
+											<div class="info-td">02-****-5678</div>
+										</div>
+										<div class="info-row">
+											<div class="info-th">팩스번호</div>
+											<div class="info-td">02-****-4321</div>
 										</div>
 									</div>
 								</div>
 							</div>
-							<!-- //business-card-info -->
+
 							<!-- group -->
 							<div class="group py0 px4 mt24">
 								<strong class="title-large">메모</strong>
@@ -314,44 +326,6 @@
 							</div>
 							<!-- //info-detail-list -->
 
-							<!-- bottom-btn -->
-							<div class="bottom-btn bottom-btn-contact">
-								<div class="info-anchor">
-									<ul>
-										<li>
-											<button type="button">
-												<i class="icon-only icon-36 icon-phone bg-status-active"></i>
-												<span>휴대폰</span>
-											</button>
-										</li>
-										<li>
-											<button type="button">
-												<i class="icon-only icon-36 icon-sms bg-status-active"></i>
-												<span>문자</span>
-											</button>
-										</li>
-										<li>
-											<button type="button">
-												<i class="icon-only icon-36 icon-mail bg-status-active"></i>
-												<span>이메일</span>
-											</button>
-										</li>
-										<li>
-											<button type="button">
-												<i class="icon-only icon-36 icon-call bg-status-active"></i>
-												<span>회사전화</span>
-											</button>
-										</li>
-										<li>
-											<button type="button">
-												<i class="icon-only icon-36 icon-memo bg-status-active"></i>
-												<span>메모 </span>
-											</button>
-										</li>
-									</ul>
-								</div>
-							</div>
-							<!-- //bottom-btn -->
 						</div>
 						<!-- //section-tablet-right -->
 					</div>
@@ -369,6 +343,44 @@
 		<!-- //main-inner -->
 
 
+		<!-- bottom-btn -->
+		<div class="bottom-btn bottom-btn-contact">
+			<div class="info-anchor">
+				<ul>
+					<li>
+						<button type="button">
+							<i class="icon-only icon-36 icon-phone bg-status-active"></i>
+							<span>휴대폰</span>
+						</button>
+					</li>
+					<li>
+						<button type="button">
+							<i class="icon-only icon-36 icon-sms bg-status-active"></i>
+							<span>문자</span>
+						</button>
+					</li>
+					<li>
+						<button type="button">
+							<i class="icon-only icon-36 icon-mail bg-status-active"></i>
+							<span>이메일</span>
+						</button>
+					</li>
+					<li>
+						<button type="button">
+							<i class="icon-only icon-36 icon-call bg-status-active"></i>
+							<span>회사전화</span>
+						</button>
+					</li>
+					<li>
+						<button type="button">
+							<i class="icon-only icon-36 icon-memo bg-status-active"></i>
+							<span>메모 </span>
+						</button>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<!-- //bottom-btn -->
 
 	</main>
 	<!-- //main -->
@@ -590,26 +602,26 @@
 		})
 	</script>
 	<script>
-		// $(function() {
-		// 	// textarea length
-		// 	const bottomBtn = $('.bottom-btn-contact');
-		// 	const sectionLeft = $('.section-tablet-left');
-		// 	let sectionLeftWidth = sectionLeft.width();
-		// 	if ($('html').hasClass('TABLET')) {
-		// 		bottomBtn.css('width', sectionLeftWidth);
-		// 	} else {
-		// 		bottomBtn.css('width', '');
-		// 	}
+		$(function() {
+			// textarea length
+			const bottomBtn = $('.bottom-btn-contact');
+			const sectionLeft = $('.section-tablet-right');
+			let sectionLeftWidth = sectionLeft.width();
+			if ($('html').hasClass('TABLET')) {
+				bottomBtn.css('max-width', sectionLeftWidth);
+			} else {
+				bottomBtn.css('max-width', '');
+			}
 
-		// 	$(window).on('resize', function() {
-		// 		sectionLeftWidth = sectionLeft.width();
-		// 		if ($('html').hasClass('TABLET')) {
-		// 			bottomBtn.css('width', sectionLeftWidth);
-		// 		} else {
-		// 			bottomBtn.css('width', '');
-		// 		}
-		// 	});
-		// });
+			$(window).on('resize', function() {
+				sectionLeftWidth = sectionLeft.width();
+				if ($('html').hasClass('TABLET')) {
+					bottomBtn.css('max-width', sectionLeftWidth);
+				} else {
+					bottomBtn.css('max-width', '');
+				}
+			});
+		});
 	</script>
 </body>
 
