--- a/publish/PBWBU/PBWBU020001_tablet.html
+++ b/publish/PBWBU/PBWBU020001_tablet.html
@@ -119,7 +119,7 @@
 							</div>
 							<!-- //upload-picture -->
 							<!-- business-card-info -->
-							<div class="business-card-info mt40">
+							<div class="business-card-info">
 								<div class="info-title">
 									<div class="info-name">
 										<div class="info-thumb">
