--- a/publish/PBWMA/PBWMA000000_tablet.html
+++ b/publish/PBWMA/PBWMA000000_tablet.html
@@ -102,8 +102,8 @@
 							<div class="visual-headline content-fluid">
 								<figure>
 									<picture>
-										<source srcset="/resources/images/PBWMA/image_headline.png" media="(max-width:767px)">
-										<source srcset="/resources/images/PBWMA/image_headline_tablet.png 2x" media="(min-width:768px)">
+										<source srcset="/resources/images/PBWMA/image_headline.png" media="(max-width:767px);">
+										<source srcset="/resources/images/PBWMA/image_headline_tablet.png 2x" media="(min-width:768px);">
 										<img src="/resources/images/PBWMA/image_headline.png" alt="">
 									</picture>
 									<figcaption>
