--- a/publish/PBWBU/PBWBU020001_tablet.html
+++ b/publish/PBWBU/PBWBU020001_tablet.html
@@ -399,8 +399,8 @@
 						<div class="pinch-zoom-wrap">
 							<div class="pinch-zoom">
 								<picture>
-									<source srcset="/resources/@temp/thumb_h.png">
-									<img src="/resources/@temp/thumb_h.png" alt="">
+									<source srcset="/resources/@temp/thumb_w.png">
+									<img src="/resources/@temp/thumb_w.png" alt="">
 								</picture>
 
 							</div>
