--- a/publish/PBWIV/PBWIV090000.html
+++ b/publish/PBWIV/PBWIV090000.html
@@ -121,6 +121,14 @@
 						<div class="sticky-content content-fluid py0 bg-transparent">
 							<div class="sticky-content-inner">
 								<div class="group content-fluid py12">
+									<div class="left">
+										<div class="inp inp-medium">
+											<label>
+												<input type="checkbox" id="chk03">
+												<span class="label-title">마이 뉴스</span>
+											</label>
+										</div>
+									</div>
 									<div class="right">
 										<button type="button" class="btn-xsmall btn-outlined btn-round"><i class="ico-speaker"></i>전체 듣기</button>
 									</div>
