--- a/publish/index.html
+++ b/publish/index.html
@@ -788,7 +788,14 @@
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWFU070000</a></td>
 					</tr>
-
+					<tr class="for-new">
+						<td></td>
+						<td></td>
+						<td>[Mobile, Tablet] 나의 댓글</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWFU100000</a></td>
+					</tr>
 				</tbody>
 				<tbody data-folder="PBWCL">
 					<tr>
@@ -1243,7 +1250,7 @@
 						<td>검색결과없음</td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWIV080002_noresult</a></td>
 					</tr>
-					<tr>
+					<tr class="for-new">
 						<td></td>
 						<td></td>
 						<td>금융뉴스</td>
