--- a/publish/index.html
+++ b/publish/index.html
@@ -796,6 +796,14 @@
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWFU100000</a></td>
 					</tr>
+					<tr class="for-new">
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>내용없음</td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWFU100000_nodata</a></td>
+					</tr>
 				</tbody>
 				<tbody data-folder="PBWCL">
 					<tr>
