--- a/publish/PBWIV/PBWIV090000.html
+++ b/publish/PBWIV/PBWIV090000.html
@@ -118,7 +118,7 @@
 
 						<!-- sticky-content -->
 						<div class="sticky-sentinal"></div>
-						<div class="sticky-content content-fluid py0">
+						<div class="sticky-content content-fluid py0 bg-background-bg_lightGray">
 							<div class="sticky-content-inner">
 								<div class="group content-fluid py12">
 									<div class="left">
