--- a/publish/PBWBU/PBWBU010002_tablet.html
+++ b/publish/PBWBU/PBWBU010002_tablet.html
@@ -91,7 +91,7 @@
 				<div class="content">
 
 					<style>
-						@media (min-width:768px) {
+						@media (min-width:768px) and (orientation:landscape) {
 							.main-inner .content {
 								padding-bottom: 0;
 								padding-left: 0;
