--- a/publish/PBWBU/PBWBU020001_tablet.html
+++ b/publish/PBWBU/PBWBU020001_tablet.html
@@ -92,7 +92,7 @@
 
 
 					<style>
-						@media (min-width:768px) {
+						@media (min-width:768px) and (orientation:landscape) {
 							.main-inner .content {
 								padding-bottom: 0;
 								padding-left: 0;
