--- a/publish/PBWCA/PBWCA029900.html
+++ b/publish/PBWCA/PBWCA029900.html
@@ -86,143 +86,7 @@
 
 			<!-- container -->
 			<div id="container">
-				<!-- content -->
-				<div class="content">
 
-					<div class="schedule-section-title content-fluid">
-						<i class="icon-only icon-24 icon-calendar" aria-label="개인일정"></i>
-						<!-- 반복일 경우 -->
-						<i class="icon-only icon-24 icon-calendar-repeat" aria-label="개인일정 반복"></i>
-						<!-- //반복일 경우 -->
-						<strong class="headline-medium">본부 Workshop</strong>
-					</div>
-
-					<div class="stroke"></div>
-
-					<!-- group-form -->
-					<div class="group-form mt32">
-						<div class="group-title">
-							<strong class="title-medium">일시 <i class="apos" aria-label="필수 입력">*</i></strong>
-							<div class="inp inp-toggle">
-								<label>
-									<span class="label-title">하루종일</span>
-									<input type="checkbox" onclick="return false;">
-								</label>
-							</div>
-						</div>
-						<div class="group-content mt16">
-							<div class="schedule-regist">
-								<dl>
-									<dt>
-										<div class="tags tags-small tags-lightGray tags-round">시작</div>
-									</dt>
-									<dd>
-										<div class="schedule-regist-trigger"><span>12월 7일</span><span>월요일</span></div>
-									</dd>
-									<dd>
-										<div class="schedule-regist-trigger">오후 2시</div>
-									</dd>
-								</dl>
-								<dl>
-									<dt>
-										<div class="tags tags-small tags-lightGray tags-round">종료</div>
-									</dt>
-									<dd>
-										<div class="schedule-regist-trigger"><span>12월 7일</span><span>월요일</span></div>
-									</dd>
-									<dd>
-										<div class="schedule-regist-trigger">오후 3시</div>
-									</dd>
-								</dl>
-							</div>
-						</div>
-					</div>
-					<!-- //group-form -->
-
-
-
-					<!-- group-form -->
-					<div class="group-form mt40">
-						<div class="group-title">
-							<strong class="title-medium">장소</strong>
-						</div>
-						<div class="group-content">
-							<div class="d-flex a-center gap8 px4">
-								<div class="body-large">12층 3번 회의실</div>
-							</div>
-						</div>
-					</div>
-					<!-- //group-form -->
-
-					<!-- group-form -->
-					<div class="group-form mt40">
-						<div class="group-title">
-							<strong class="title-medium">반복</strong>
-						</div>
-						<div class="group-content">
-							<div class="d-flex a-center gap8 px4">
-								<div class="body-large">매주 금요일</div>
-							</div>
-						</div>
-					</div>
-					<!-- //group-form -->
-
-
-					<!-- group-form -->
-					<div class="group-form mt40">
-						<div class="group-title">
-							<strong class="title-medium">공유</strong>
-						</div>
-
-						<!-- 직원 선택 후 -->
-						<div class="group-content">
-							<div class="form">
-								<div class="label"></div>
-								<div class="input-wrap input-btn-wrap">
-									<span class="btn-xsmall btn-outlined btn-round"><span>무궁화꽃이피었습니다최대열일곱글자가노출됩니다.</span></span>
-									<span class="btn-xsmall btn-outlined btn-round"><span>김우리 부부장(자산관리플랫폼부)</span></span>
-									<span class="btn-xsmall btn-outlined btn-round"><span>김우리 부부장(자산관리플랫폼부)</span></span>
-									<span class="btn-xsmall btn-outlined btn-round"><span>김우리 부부장(자산관리플랫폼부)</span></span>
-									<span class="btn-xsmall btn-outlined btn-round"><span>김우리 부부장(자산관리플랫폼부)</span></span>
-									<span class="btn-xsmall btn-outlined btn-round"><span>김우리 부부장(자산관리플랫폼부)</span></span>
-									<span class="btn-xsmall btn-outlined btn-round"><span>김우리 부부장(자산관리플랫폼부)</span></span>
-								</div>
-								<p class="validate-text"></p>
-							</div>
-						</div>
-					</div>
-					<!-- //group-form -->
-
-					<!-- group-form -->
-					<div class="group-form mt40">
-						<div class="group-title">
-							<strong class="title-medium">메모</strong>
-						</div>
-						<div class="group-content">
-							<div class="d-flex a-center gap8 px4">
-								<div class="body-large">회의자료 필수 준비</div>
-							</div>
-						</div>
-					</div>
-					<!-- //group-form -->
-
-
-					<!-- group-form -->
-					<div class="group-form mt40">
-						<div class="group-title">
-							<strong class="title-medium">Push 알림</strong>
-						</div>
-						<div class="group-content">
-							<div class="d-flex a-center gap8 px4">
-								<div class="body-large">30분전</div>
-							</div>
-						</div>
-					</div>
-					<!-- //group-form -->
-
-
-				</div>
-				<!-- //content -->
 			</div>
 			<!-- //container -->
 
@@ -244,6 +108,168 @@
 
 	</main>
 	<!-- //main -->
+
+
+
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-detail" aria-hidden="true">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+
+				<div class="modal__header modal__header__alert">
+					<strong class="modal__title title-large"></strong>
+					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close=""></button>
+				</div>
+				<div class="modal__content modal__content__alert">
+					<div class="content">
+
+						<div class="schedule-section-title content-fluid">
+							<i class="icon-only icon-24 icon-calendar" aria-label="개인일정"></i>
+							<!-- 반복일 경우 -->
+							<i class="icon-only icon-24 icon-calendar-repeat" aria-label="개인일정 반복"></i>
+							<!-- //반복일 경우 -->
+							<strong class="headline-medium">본부 Workshop</strong>
+						</div>
+
+						<div class="stroke"></div>
+
+						<!-- group-form -->
+						<div class="group-form mt32">
+							<div class="group-title">
+								<strong class="title-medium">일시 <i class="apos" aria-label="필수 입력">*</i></strong>
+								<div class="inp inp-toggle">
+									<label>
+										<span class="label-title">하루종일</span>
+										<input type="checkbox" onclick="return false;">
+									</label>
+								</div>
+							</div>
+							<div class="group-content mt16">
+								<div class="schedule-regist">
+									<dl>
+										<dt>
+											<div class="tags tags-small tags-lightGray tags-round">시작</div>
+										</dt>
+										<dd>
+											<div class="schedule-regist-trigger"><span>12월 7일</span><span>월요일</span></div>
+										</dd>
+										<dd>
+											<div class="schedule-regist-trigger">오후 2시</div>
+										</dd>
+									</dl>
+									<dl>
+										<dt>
+											<div class="tags tags-small tags-lightGray tags-round">종료</div>
+										</dt>
+										<dd>
+											<div class="schedule-regist-trigger"><span>12월 7일</span><span>월요일</span></div>
+										</dd>
+										<dd>
+											<div class="schedule-regist-trigger">오후 3시</div>
+										</dd>
+									</dl>
+								</div>
+							</div>
+						</div>
+						<!-- //group-form -->
+
+
+
+						<!-- group-form -->
+						<div class="group-form mt40">
+							<div class="group-title">
+								<strong class="title-medium">장소</strong>
+							</div>
+							<div class="group-content">
+								<div class="d-flex a-center gap8 px4">
+									<div class="body-large">12층 3번 회의실</div>
+								</div>
+							</div>
+						</div>
+						<!-- //group-form -->
+
+						<!-- group-form -->
+						<div class="group-form mt40">
+							<div class="group-title">
+								<strong class="title-medium">반복</strong>
+							</div>
+							<div class="group-content">
+								<div class="d-flex a-center gap8 px4">
+									<div class="body-large">매주 금요일</div>
+								</div>
+							</div>
+						</div>
+						<!-- //group-form -->
+
+
+						<!-- group-form -->
+						<div class="group-form mt40">
+							<div class="group-title">
+								<strong class="title-medium">공유</strong>
+							</div>
+
+							<!-- 직원 선택 후 -->
+							<div class="group-content">
+								<div class="form">
+									<div class="label"></div>
+									<div class="input-wrap input-btn-wrap">
+										<span class="btn-xsmall btn-outlined btn-round"><span>무궁화꽃이피었습니다최대열일곱글자가노출됩니다.</span></span>
+										<span class="btn-xsmall btn-outlined btn-round"><span>김우리 부부장(자산관리플랫폼부)</span></span>
+										<span class="btn-xsmall btn-outlined btn-round"><span>김우리 부부장(자산관리플랫폼부)</span></span>
+										<span class="btn-xsmall btn-outlined btn-round"><span>김우리 부부장(자산관리플랫폼부)</span></span>
+										<span class="btn-xsmall btn-outlined btn-round"><span>김우리 부부장(자산관리플랫폼부)</span></span>
+										<span class="btn-xsmall btn-outlined btn-round"><span>김우리 부부장(자산관리플랫폼부)</span></span>
+										<span class="btn-xsmall btn-outlined btn-round"><span>김우리 부부장(자산관리플랫폼부)</span></span>
+									</div>
+									<p class="validate-text"></p>
+								</div>
+							</div>
+						</div>
+						<!-- //group-form -->
+
+						<!-- group-form -->
+						<div class="group-form mt40">
+							<div class="group-title">
+								<strong class="title-medium">메모</strong>
+							</div>
+							<div class="group-content">
+								<div class="d-flex a-center gap8 px4">
+									<div class="body-large">회의자료 필수 준비</div>
+								</div>
+							</div>
+						</div>
+						<!-- //group-form -->
+
+
+						<!-- group-form -->
+						<div class="group-form mt40">
+							<div class="group-title">
+								<strong class="title-medium">Push 알림</strong>
+							</div>
+							<div class="group-content">
+								<div class="d-flex a-center gap8 px4">
+									<div class="body-large">30분전</div>
+								</div>
+							</div>
+						</div>
+						<!-- //group-form -->
+
+					</div>
+				</div>
+				<div class="modal__footer">
+					<!-- bottom-btn -->
+					<div class="bottom-btn">
+						<div class="btn-wrap">
+							<button type="button" class="btn-large btn-outlined" onclick="$swal.fire02('이 일정을 삭제하시겠습니까?', 'caution', '확인');">삭제</button>
+							<button type="button" class="btn-large btn-primary" data-micromodal-trigger="modal-modify">수정</button>
+						</div>
+					</div>
+					<!-- //bottom-btn -->
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
 
 
 
@@ -292,6 +318,9 @@
 
 
 
+	<script>
+		MicroModal.show('modal-detail'); // [1]
+	</script>
 
 </body>
 
