--- a/publish/PBWBU/PBWBU010001_modify_tablet.html
+++ b/publish/PBWBU/PBWBU010001_modify_tablet.html
@@ -131,7 +131,7 @@
 
 
 						<style>
-							@media (min-width:768px) {
+							@media (min-width:768px) and (orientation:landscape) {
 								.modal__content .content {
 									padding-bottom: 0;
 									padding-left: 0;
