--- a/publish/PBWBU/PBWBU020001_tablet.html
+++ b/publish/PBWBU/PBWBU020001_tablet.html
@@ -93,7 +93,7 @@
 
 					<style>
 						@media (min-width:768px) and (orientation:landscape) {
-							.main-inner .content {
+							.main-inner>#container>.content {
 								padding-bottom: 0;
 								padding-left: 0;
 								padding-right: 0;
