--- a/publish/PBWCA/PBWCA029902.html
+++ b/publish/PBWCA/PBWCA029902.html
@@ -86,123 +86,7 @@
 
 			<!-- container -->
 			<div id="container">
-				<!-- content -->
-				<div class="content">
 
-					<div class="schedule-section-title content-fluid">
-						<i class="icon-only icon-24 icon-wallet bg-cyan-500" aria-label="수신만기"></i>
-						<strong class="headline-medium">홍길동 수신만기</strong>
-					</div>
-
-					<div class="stroke"></div>
-
-					<!-- group-form -->
-					<div class="group-form mt32">
-						<div class="group-title">
-							<strong class="title-medium">고객등급</strong>
-						</div>
-						<div class="group-content">
-							<div class="d-flex a-center gap8 px4">
-								<div class="body-large">TC등급</div>
-							</div>
-						</div>
-					</div>
-					<!-- //group-form -->
-
-					<!-- group-form -->
-					<div class="group-form mt40">
-						<div class="group-title">
-							<strong class="title-medium">만기일</strong>
-						</div>
-						<div class="group-content">
-							<div class="d-flex a-center gap8 px4">
-								<div class="body-large">2024년 12월 2일 월요일</div>
-							</div>
-						</div>
-					</div>
-					<!-- //group-form -->
-
-					<!-- group-form -->
-					<div class="group-form mt40">
-						<div class="group-title">
-							<strong class="title-medium">계좌잔액</strong>
-						</div>
-						<div class="group-content">
-							<div class="d-flex a-center gap8 px4">
-								<div class="body-large">100,000,000원</div>
-							</div>
-						</div>
-					</div>
-					<!-- //group-form -->
-
-					<!-- group-form -->
-					<div class="group-form mt40">
-						<div class="group-title">
-							<strong class="title-medium">통합고객번호</strong>
-						</div>
-						<div class="group-content">
-							<div class="d-flex a-center gap8 px4">
-								<div class="body-large">12345678901</div>
-							</div>
-						</div>
-					</div>
-					<!-- //group-form -->
-
-					<!-- group-form -->
-					<div class="group-form mt40">
-						<div class="group-title">
-							<strong class="title-medium">상품명</strong>
-						</div>
-						<div class="group-content">
-							<div class="d-flex a-center gap8 px4">
-								<div class="body-large">우리SUPER정기예금</div>
-							</div>
-						</div>
-					</div>
-					<!-- //group-form -->
-
-					<!-- group-form -->
-					<div class="group-form mt40">
-						<div class="group-title">
-							<strong class="title-medium">계좌번호</strong>
-						</div>
-						<div class="group-content">
-							<div class="d-flex a-center gap8 px4">
-								<div class="body-large">1023-4*-******</div>
-							</div>
-						</div>
-					</div>
-					<!-- //group-form -->
-
-					<!-- group-form -->
-					<div class="group-form mt40">
-						<div class="group-title">
-							<strong class="title-medium">이율(금리)</strong>
-						</div>
-						<div class="group-content">
-							<div class="d-flex a-center gap8 px4">
-								<div class="body-large">0.00%</div>
-							</div>
-						</div>
-					</div>
-					<!-- //group-form -->
-
-					<!-- group-form -->
-					<div class="group-form mt40">
-						<div class="group-title">
-							<strong class="title-medium">KC재확인일</strong>
-						</div>
-						<div class="group-content">
-							<div class="d-flex a-center gap8 px4">
-								<div class="body-large">2026년 12월 2일 월요일</div>
-							</div>
-						</div>
-					</div>
-					<!-- //group-form -->
-
-
-				</div>
-				<!-- //content -->
 			</div>
 			<!-- //container -->
 
@@ -223,6 +107,155 @@
 
 	</main>
 	<!-- //main -->
+
+
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-detail" aria-hidden="true">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+
+				<div class="modal__header modal__header__alert">
+					<strong class="modal__title title-large"></strong>
+					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close=""></button>
+				</div>
+				<div class="modal__content modal__content__alert">
+					<!-- content -->
+					<div class="content">
+
+						<div class="schedule-section-title content-fluid">
+							<i class="icon-only icon-24 icon-wallet bg-cyan-500" aria-label="수신만기"></i>
+							<strong class="headline-medium">홍길동 수신만기</strong>
+						</div>
+
+						<div class="stroke"></div>
+
+						<!-- group-form -->
+						<div class="group-form mt32">
+							<div class="group-title">
+								<strong class="title-medium">고객등급</strong>
+							</div>
+							<div class="group-content">
+								<div class="d-flex a-center gap8 px4">
+									<div class="body-large">TC등급</div>
+								</div>
+							</div>
+						</div>
+						<!-- //group-form -->
+
+						<!-- group-form -->
+						<div class="group-form mt40">
+							<div class="group-title">
+								<strong class="title-medium">만기일</strong>
+							</div>
+							<div class="group-content">
+								<div class="d-flex a-center gap8 px4">
+									<div class="body-large">2024년 12월 2일 월요일</div>
+								</div>
+							</div>
+						</div>
+						<!-- //group-form -->
+
+						<!-- group-form -->
+						<div class="group-form mt40">
+							<div class="group-title">
+								<strong class="title-medium">계좌잔액</strong>
+							</div>
+							<div class="group-content">
+								<div class="d-flex a-center gap8 px4">
+									<div class="body-large">100,000,000원</div>
+								</div>
+							</div>
+						</div>
+						<!-- //group-form -->
+
+						<!-- group-form -->
+						<div class="group-form mt40">
+							<div class="group-title">
+								<strong class="title-medium">통합고객번호</strong>
+							</div>
+							<div class="group-content">
+								<div class="d-flex a-center gap8 px4">
+									<div class="body-large">12345678901</div>
+								</div>
+							</div>
+						</div>
+						<!-- //group-form -->
+
+						<!-- group-form -->
+						<div class="group-form mt40">
+							<div class="group-title">
+								<strong class="title-medium">상품명</strong>
+							</div>
+							<div class="group-content">
+								<div class="d-flex a-center gap8 px4">
+									<div class="body-large">우리SUPER정기예금</div>
+								</div>
+							</div>
+						</div>
+						<!-- //group-form -->
+
+						<!-- group-form -->
+						<div class="group-form mt40">
+							<div class="group-title">
+								<strong class="title-medium">계좌번호</strong>
+							</div>
+							<div class="group-content">
+								<div class="d-flex a-center gap8 px4">
+									<div class="body-large">1023-4*-******</div>
+								</div>
+							</div>
+						</div>
+						<!-- //group-form -->
+
+						<!-- group-form -->
+						<div class="group-form mt40">
+							<div class="group-title">
+								<strong class="title-medium">이율(금리)</strong>
+							</div>
+							<div class="group-content">
+								<div class="d-flex a-center gap8 px4">
+									<div class="body-large">0.00%</div>
+								</div>
+							</div>
+						</div>
+						<!-- //group-form -->
+
+						<!-- group-form -->
+						<div class="group-form mt40">
+							<div class="group-title">
+								<strong class="title-medium">KC재확인일</strong>
+							</div>
+							<div class="group-content">
+								<div class="d-flex a-center gap8 px4">
+									<div class="body-large">2026년 12월 2일 월요일</div>
+								</div>
+							</div>
+						</div>
+						<!-- //group-form -->
+
+
+					</div>
+					<!-- //content -->
+				</div>
+				<div class="modal__footer">
+					<!-- bottom-btn -->
+					<div class="bottom-btn">
+						<div class="btn-wrap">
+							<button type="button" class="btn-large btn-primary"><i class="ico-add"></i>개인 일정으로 추가</button>
+						</div>
+					</div>
+					<!-- //bottom-btn -->
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
+
+
+	<script>
+		MicroModal.show('modal-detail'); // [1]
+	</script>
+
 
 
 </body>
