--- a/publish/PBWAI/PBWAI000000_tablet.html
+++ b/publish/PBWAI/PBWAI000000_tablet.html
@@ -95,7 +95,7 @@
 							background-color: var(--background-bg_lightGray);
 						}
 
-						.main-inner .content {
+						.main-inner>#container>.content {
 							padding-bottom: 0;
 						}
 					</style>
