--- a/publish/PBWMA/PBWMA000000_tablet.html
+++ b/publish/PBWMA/PBWMA000000_tablet.html
@@ -90,7 +90,7 @@
 				<!-- content -->
 				<div class="content">
 					<style>
-						.main-inner .content {
+						.main-inner>#container>.content {
 							padding-bottom: 0;
 						}
 					</style>
