--- a/publish/PBWCL/PBWCL000000_tablet.html
+++ b/publish/PBWCL/PBWCL000000_tablet.html
@@ -205,8 +205,22 @@
 							</div>
 						</div>
 						<!-- //tab-content -->
+
 						<div class="tablet-maxwidth tablet-maxwidth-fluid">
 
+							<div class="group-form-tablet">
+								<!-- form -->
+								<div class="form" style="max-width:525px;">
+									<div class="label"></div>
+									<div class="input-wrap input-btn">
+										<input type="tel" placeholder="‘-’ 없이 숫자만 입력" aria-label="검색">
+										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
+										<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
+									</div>
+									<p class="validate-text"></p>
+								</div>
+								<!-- //form -->
+							</div>
 
 							<div class="group-form-tablet">
 								<div class="group-form">
@@ -242,6 +256,7 @@
 								<!-- //form -->
 							</div>
 						</div>
+
 
 
 						<!-- division-center -->
