--- a/publish/PBWCL/PBWCL000000_tablet.html
+++ b/publish/PBWCL/PBWCL000000_tablet.html
@@ -209,36 +209,36 @@
 						<div class="tablet-maxwidth tablet-maxwidth-fluid">
 
 							<div class="group-form-tablet">
-								<!-- form -->
-								<div class="form" style="max-width:525px;">
-									<div class="label"></div>
-									<div class="input-wrap input-btn">
-										<input type="tel" placeholder="‘-’ 없이 숫자만 입력" aria-label="검색">
-										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
-										<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
+								<div class="grop-form" style="flex:1;max-width:525px;">
+									<!-- form -->
+									<div class="form" style="max-width:525px;">
+										<div class="label"></div>
+										<div class="input-wrap input-btn">
+											<input type="tel" placeholder="‘-’ 없이 숫자만 입력" aria-label="검색">
+											<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
+											<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
+										</div>
+										<p class="validate-text"></p>
 									</div>
-									<p class="validate-text"></p>
+									<!-- //form -->
 								</div>
-								<!-- //form -->
 							</div>
 
 							<div class="group-form-tablet">
 								<div class="group-form">
-									<div class="group-content">
-										<div class="form">
-											<div class="inp-group no-flex-wrap">
-												<div class="inp inp-medium">
-													<label>
-														<input type="radio" name="rad003">
-														<span class="label-title nowrap">법인</span>
-													</label>
-												</div>
-												<div class="inp inp-medium">
-													<label>
-														<input type="radio" name="rad003">
-														<span class="label-title nowrap">사업자</span>
-													</label>
-												</div>
+									<div class="form">
+										<div class="inp-group no-flex-wrap">
+											<div class="inp inp-medium">
+												<label>
+													<input type="radio" name="rad003">
+													<span class="label-title nowrap">법인</span>
+												</label>
+											</div>
+											<div class="inp inp-medium">
+												<label>
+													<input type="radio" name="rad003">
+													<span class="label-title nowrap">사업자</span>
+												</label>
 											</div>
 										</div>
 									</div>
